--- a/application/views/scripts/mergulho/tablepesqueiro.phtml
+++ b/application/views/scripts/mergulho/tablepesqueiro.phtml
@@ -2,10 +2,10 @@
     <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
         <table id="pesqueiros">
             <tr>
-            <th width="5%">Id Entrevista</th>
-            <th width="50%">Pesqueiro</th>
-            <th width="30%">Tempo até o Pesqueiro</th>
-            <th width="30%">Distância até o Pesqueiro</th>
+            <th width="15%">Id Entrevista</th>
+            <th width="40%">Pesqueiro</th>
+            <th width="20%">Tempo até o Pesqueiro</th>
+            <th width="25%">Distância até o Pesqueiro</th>
             </tr>
             <?php
             foreach ($this->vMergulho as $key => $vMergulho):
@@ -15,7 +15,13 @@
                 <td name="inputPesqueiro" > <?= $vMergulho['paf_pesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vMergulho['t_tempoapesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vMergulho['t_distapesqueiro'] ?> </td>
-                <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['mer_id'] ?>, '<?= $this->url(array("controller" => "mergulho", "action" => "deletepesqueiro"), null, true) ?>', <?= $vMergulho['mer_paf_id'] ?>, 'pesqueiro')"></td>
+                <td class="td-botao">
+                    <a name="Excluir" class="button-del" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['mer_id'] ?>, '<?= $this->url(array("controller" => "mergulho", "action" => "deletepesqueiro"), null, true) ?>', <?= $vMergulho['mer_paf_id'] ?>, 'pesqueiro')">
+                        <ul id="icons" class="ui-widget ui-helper-clearfix">
+                            <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                        </ul>
+                    </a> 
+                </td>
                 </tr>
             <?php endforeach; ?>
         </table>
