--- a/application/views/scripts/arrasto-fundo/tablepesqueiro.phtml
+++ b/application/views/scripts/arrasto-fundo/tablepesqueiro.phtml
@@ -3,7 +3,7 @@
     <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
                 <table id="pesqueiros">
                     <tr>
-                        <th width="5%">Id Entrevista</th>
+                        <th width="20%">Id Entrevista</th>
                         <th width="50%">Pesqueiro</th>
                         <th width="30%">Tempo no Pesqueiro</th>
                     </tr>
@@ -14,7 +14,13 @@
                             <td name="inputIdEntrevista"> <?= $vArrastoFundo['af_id'] ?> </td>
                             <td name="inputPesqueiro" > <?= $vArrastoFundo['paf_pesqueiro'] ?> </td>
                             <td name="inputTempoaPesqueiro"> <?= $vArrastoFundo['t_tempopesqueiro'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $vArrastoFundo['af_id'] ?>, '<?= $this->url(array("controller" => "arrasto-fundo", "action" => "deletepesqueiro"), null, true) ?>', <?= $vArrastoFundo['af_paf_id'] ?>, 'pesqueiro')"></td>
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="ajax_delete_entrevista_has(<?= $vArrastoFundo['af_id'] ?>, '<?= $this->url(array("controller" => "arrasto-fundo", "action" => "deletepesqueiro"), null, true) ?>', <?= $vArrastoFundo['af_paf_id'] ?>, 'pesqueiro')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
