--- a/application/views/scripts/emalhe/editar.phtml
+++ b/application/views/scripts/emalhe/editar.phtml
@@ -178,7 +178,7 @@
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
          
 <fieldset class="noEditable"><legend>Pesqueiro:</legend>
-    <fieldset class="noEditable"><legend>Pesqueiro e tempo no pesqueiro:</legend>
+    <fieldset class="noEditable"><legend>Pesqueiro:</legend>
             <div id="base">
                 <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "emalhe", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['em_id']?>', '')" type="button" value="Adicionar" />
                 <select class="responsivo" style="float:left;" name="nomePesqueiro">
@@ -193,6 +193,7 @@
         <br>
         <?php include ('tablepesqueiro.phtml') ?>
     </fieldset>
+    <br /><br />
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
@@ -216,6 +217,7 @@
         <br>
          <?php include ('tableespcaptura.phtml') ?>
     </fieldset>
+    <br /><br />
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
             <div id="base">
@@ -235,8 +237,8 @@
         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Avistamentos:</legend>
             <table id="pesqueiros">
                 <tr>
-                    <th width="5%">Id Avistamento</th>
-                    <th width="50%">Avistamento</th>
+                    <th width="15%">Id Avistamento</th>
+                    <th width="85%">Avistamento</th>
                 </tr>
                 <?php
                 foreach ($this->vEmalheAvistamento as $key => $vEmalheAvistamento):
@@ -244,12 +246,19 @@
                     <tr id="itemEmalheRows">
                         <td name="inputIdEntrevista"> <?= $vEmalheAvistamento['avs_id'] ?> </td>
                         <td name="inputAvistamento" > <?= $vEmalheAvistamento['avs_descricao'] ?> </td>
-                        <td><input type="button" class="button-del" width="5%" onclick="jsDeleteAvistamento(<?= $this->entrevista['em_id'] ?>, '<?= $this->url(array("controller" => "emalhe", "action" => "deleteavistamento"), null, true) ?>', <?= $vEmalheAvistamento['avs_id'] ?>)"></td>
+                        <td class="td-botao">
+                            <a name="Excluir" class="button-del" onclick="jsDeleteAvistamento(<?= $this->entrevista['em_id'] ?>, '<?= $this->url(array("controller" => "emalhe", "action" => "deleteavistamento"), null, true) ?>', <?= $vEmalheAvistamento['avs_id'] ?>)">
+                                <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                    <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                </ul>
+                            </a> 
+                        </td>
                     </tr>
                 <?php endforeach; ?>
             </table>
         </fieldset>
     </fieldset>
+    <br /><br />
     <!--////////////////////////////////////////////////////////AMOSTRAGEM PEIXES///////////////////////////////////////////////////////////-->
     <fieldset class="noEditable"><legend>Amostras de Peixes:</legend>
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
@@ -282,7 +291,7 @@
                     <tr>
                         
                         <th width="20%">Id Amostra</th>
-                        <th width="20%">Espécie</th>
+                        <th width="30%">Espécie</th>
                         <th width="20%">Comprimento</th>
                         <th width="10%">Sexo</th>
                         <th width="20%">Peso</th>
@@ -297,12 +306,19 @@
                             <td name="inputComp.Cabeca"> <?= $unidadePeixe['tbp_comprimento'] ?> </td>
                             <td name="inputSexo"> <?= $unidadePeixe['tbp_sexo'] ?> </td>
                             <td name="inputPeso"> <?= $unidadePeixe['tbp_peso'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "emalhe", "action" => "deletebiopeixe"), null, true) ?>', '<?=$this->entrevista['em_id']?>','<?= $unidadePeixe['tembp_id'] ?>', '#base_peixe')"></td>
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "emalhe", "action" => "deletebiopeixe"), null, true) ?>', '<?=$this->entrevista['em_id']?>','<?= $unidadePeixe['tembp_id'] ?>', '#base_peixe')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
             </fieldset>
         </fieldset>
+    <br /><br />
 <!--////////////////////////////////////////////////////////AMOSTRAGEM PEIXES///////////////////////////////////////////////////////////-->
         <fieldset class="noEditable"><legend>Amostras de Camarão:</legend>
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
@@ -357,7 +373,13 @@
                             <td name="inputMaturidade"> <?= $unidadeCamarao['tmat_tipo'] ?> </td>
                             <td name="inputComp.Cabeca"> <?= $unidadeCamarao['tbc_comprimento_cabeca'] ?> </td>
                             <td name="inputPeso"> <?= $unidadeCamarao['tbc_peso'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "emalhe", "action" => "deletebiocamarao"), null, true) ?>', '<?=$this->entrevista['em_id']?>','<?= $unidadeCamarao['tembc_id'] ?>', '#base_camarao')"></td>
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "emalhe", "action" => "deletebiocamarao"), null, true) ?>', '<?=$this->entrevista['em_id']?>','<?= $unidadeCamarao['tembc_id'] ?>', '#base_camarao')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
