--- a/application/views/scripts/grosseira/editar.phtml
+++ b/application/views/scripts/grosseira/editar.phtml
@@ -203,6 +203,7 @@
         <br>
         <?php include('tablepesqueiro.phtml'); ?>
     </fieldset>
+    <br /><br />
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
@@ -226,6 +227,7 @@
         <br>
          <?php include('tableespcaptura.phtml'); ?>
     </fieldset>
+    <br /><br />
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
             <div id="base">
@@ -245,8 +247,8 @@
         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Avistamentos:</legend>
             <table id="pesqueiros">
                 <tr>
-                    <th width="5%">Id Avistamento</th>
-                    <th width="50%">Avistamento</th>
+                    <th width="15%">Id Avistamento</th>
+                    <th width="85%">Avistamento</th>
                 </tr>
                 <?php
                 foreach ($this->vGrosseiraAvistamento as $key => $vGrosseiraAvistamento):
@@ -254,12 +256,19 @@
                     <tr id="itemGrosseiraRows">
                         <td name="inputIdEntrevista"> <?= $vGrosseiraAvistamento['avs_id'] ?> </td>
                         <td name="inputAvistamento" > <?= $vGrosseiraAvistamento['avs_descricao'] ?> </td>
-                        <td><input type="button" class="button-del" width="5%" onclick="jsDeleteAvistamento(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deleteavistamento"), null, true) ?>', <?= $vGrosseiraAvistamento['avs_id'] ?>)"></td>
+                        <td class="td-botao">
+                            <a name="Excluir" class="button-del" onclick="jsDeleteAvistamento(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deleteavistamento"), null, true) ?>', <?= $vGrosseiraAvistamento['avs_id'] ?>)">
+                                <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                    <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                </ul>
+                            </a> 
+                        </td>
                     </tr>
                 <?php endforeach; ?>
             </table>
         </fieldset>
     </fieldset>
+    <br /><br />
     <!--////////////////////////////////////////////////////////AMOSTRAGEM PEIXES///////////////////////////////////////////////////////////-->
     <fieldset class="noEditable"><legend>Amostras de Peixes:</legend>
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
@@ -290,9 +299,8 @@
          <fieldset class="noEditable" id="itemArteTipoRows"><legend>Dados Cadastrados:</legend>
                 <table id="especiesCapturadas">
                     <tr>
-                        
                         <th width="20%">Id Amostra</th>
-                        <th width="20%">Espécie</th>
+                        <th width="30%">Espécie</th>
                         <th width="20%">Comprimento</th>
                         <th width="10%">Sexo</th>
                         <th width="20%">Peso</th>
@@ -306,13 +314,20 @@
                             <td name="inputMaturidade"> <?= $unidadePeixe['esp_nome_comum'] ?> </td>
                             <td name="inputComp.Cabeca"> <?= $unidadePeixe['tbp_comprimento'] ?> </td>
                             <td name="inputSexo"> <?= $unidadePeixe['tbp_sexo'] ?> </td>
-                            <td name="inputPeso"> <?= $unidadePeixe['tbp_peso'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "grosseira", "action" => "deletebiopeixe"), null, true) ?>', '<?=$this->entrevista['grs_id']?>','<?= $unidadePeixe['tgrsbp_id'] ?>', '#base_peixe')"></td>
+                            <td name="inputPeso"> <?= $unidadePeixe['tbp_peso'] ?> </td>                            
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "grosseira", "action" => "deletebiopeixe"), null, true) ?>', '<?=$this->entrevista['grs_id']?>','<?= $unidadePeixe['tgrsbp_id'] ?>', '#base_peixe')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
             </fieldset>
         </fieldset>
+    <br /><br />
 <!--////////////////////////////////////////////////////////AMOSTRAGEM PEIXES///////////////////////////////////////////////////////////-->
         <fieldset class="noEditable"><legend>Amostras de Camarão:</legend>
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
@@ -347,8 +362,7 @@
         <br>
          <fieldset class="noEditable" id="itemArteTipoRows"><legend>Dados Cadastrados:</legend>
                 <table id="especiesCapturadas">
-                    <tr>
-                        
+                    <tr>                        
                         <th width="20%">Id Amostra</th>
                         <th width='20%'>Espécie</th>
                         <th width="10%">Sexo</th>
@@ -367,7 +381,13 @@
                             <td name="inputMaturidade"> <?= $unidadeCamarao['tmat_tipo'] ?> </td>
                             <td name="inputComp.Cabeca"> <?= $unidadeCamarao['tbc_comprimento_cabeca'] ?> </td>
                             <td name="inputPeso"> <?= $unidadeCamarao['tbc_peso'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "grosseira", "action" => "deletebiocamarao"), null, true) ?>', '<?=$this->entrevista['grs_id']?>','<?= $unidadeCamarao['tgrsbc_id'] ?>', '#base_camarao')"></td>
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "grosseira", "action" => "deletebiocamarao"), null, true) ?>', '<?=$this->entrevista['grs_id']?>','<?= $unidadeCamarao['tgrsbc_id'] ?>', '#base_camarao')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
