--- a/application/views/scripts/grosseira/tablepesqueiro.phtml
+++ b/application/views/scripts/grosseira/tablepesqueiro.phtml
@@ -2,7 +2,7 @@
     <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
         <table id="pesqueiros">
             <tr>
-            <th width="5%">Id Entrevista</th>
+            <th width="20%">Id Entrevista</th>
             <th width="50%">Pesqueiro</th>
             <th width="30%">Tempo até o Pesqueiro</th>
             </tr>
@@ -13,7 +13,13 @@
                 <td name="inputIdEntrevista"> <?= $vGrosseira['grs_id'] ?> </td>
                 <td name="inputPesqueiro" > <?= $vGrosseira['paf_pesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vGrosseira['t_tempoapesqueiro'] ?> </td>
-                <td><input type="button" class="button-del" width="5%" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deletepesqueiro"), null, true) ?>', <?= $vGrosseira['grs_paf_id'] ?>, 'pesqueiro')"></td>
+                <td class="td-botao">
+                    <a name="Excluir" class="button-del" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['grs_id'] ?>, '<?= $this->url(array("controller" => "grosseira", "action" => "deletepesqueiro"), null, true) ?>', <?= $vGrosseira['grs_paf_id'] ?>, 'pesqueiro')">
+                        <ul id="icons" class="ui-widget ui-helper-clearfix">
+                            <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                        </ul>
+                    </a> 
+                </td>
                 </tr>
             <?php endforeach; ?>
         </table>
