--- a/application/views/scripts/manzua/editar.phtml
+++ b/application/views/scripts/manzua/editar.phtml
@@ -187,6 +187,7 @@
             <br>
             <?php include('tablepesqueiro.phtml'); ?>
         </fieldset>
+        <br /><br />
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
@@ -213,6 +214,7 @@
         <br>
         <?php include('tableespcaptura.phtml'); ?>
     </fieldset>
+        <br /><br />
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
             <div id="base">
@@ -231,8 +233,8 @@
         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Avistamentos:</legend>
             <table id="pesqueiros">
                 <tr>
-                    <th width="5%">Id Avistamento</th>
-                    <th width="50%">Avistamento</th>
+                    <th width="15%">Id Avistamento</th>
+                    <th width="85%">Avistamento</th>
                 </tr>
                 <?php
                 foreach ($this->vManzuaAvistamento as $key => $vManzuaAvistamento):
@@ -240,12 +242,19 @@
                     <tr id="itemManzuaRows">
                         <td name="inputIdEntrevista"> <?= $vManzuaAvistamento['avs_id'] ?> </td>
                         <td name="inputAvistamento" > <?= $vManzuaAvistamento['avs_descricao'] ?> </td>
-                        <td><input type="button" class="button-del" width="5%" onclick="jsDeleteAvistamento(<?= $this->entrevista['man_id'] ?>, '<?= $this->url(array("controller" => "manzua", "action" => "deleteavistamento"), null, true) ?>', <?= $vManzuaAvistamento['avs_id'] ?>)"></td>
+                        <td class="td-botao">
+                            <a name="Excluir" class="button-del" onclick="jsDeleteAvistamento(<?= $this->entrevista['man_id'] ?>, '<?= $this->url(array("controller" => "manzua", "action" => "deleteavistamento"), null, true) ?>', <?= $vManzuaAvistamento['avs_id'] ?>)">
+                                <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                    <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                </ul>
+                            </a> 
+                        </td>
                     </tr>
                 <?php endforeach; ?>
             </table>
         </fieldset>
     </fieldset>
+        <br /><br />
     <!--////////////////////////////////////////////////////////AMOSTRAGEM PEIXES///////////////////////////////////////////////////////////-->
     <fieldset class="noEditable"><legend>Amostras de Peixes:</legend>
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
@@ -278,7 +287,7 @@
                     <tr>
                         
                         <th width="20%">Id Amostra</th>
-                        <th width="20%">Espécie</th>
+                        <th width="30%">Espécie</th>
                         <th width="20%">Comprimento</th>
                         <th width="10%">Sexo</th>
                         <th width="20%">Peso</th>
@@ -293,12 +302,19 @@
                             <td name="inputComp.Cabeca"> <?= $unidadePeixe['tbp_comprimento'] ?> </td>
                             <td name="inputSexo"> <?= $unidadePeixe['tbp_sexo'] ?> </td>
                             <td name="inputPeso"> <?= $unidadePeixe['tbp_peso'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "manzua", "action" => "deletebiopeixe"), null, true) ?>', '<?=$this->entrevista['man_id']?>','<?= $unidadePeixe['tmanbp_id'] ?>', '#base_peixe')"></td>
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "manzua", "action" => "deletebiopeixe"), null, true) ?>', '<?=$this->entrevista['man_id']?>','<?= $unidadePeixe['tmanbp_id'] ?>', '#base_peixe')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
             </fieldset>
         </fieldset>
+        <br /><br />
 <!--////////////////////////////////////////////////////////AMOSTRAGEM PEIXES///////////////////////////////////////////////////////////-->
         <fieldset class="noEditable"><legend>Amostras de Camarão:</legend>
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
@@ -353,7 +369,13 @@
                             <td name="inputMaturidade"> <?= $unidadeCamarao['tmat_tipo'] ?> </td>
                             <td name="inputComp.Cabeca"> <?= $unidadeCamarao['tbc_comprimento_cabeca'] ?> </td>
                             <td name="inputPeso"> <?= $unidadeCamarao['tbc_peso'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "manzua", "action" => "deletebiocamarao"), null, true) ?>', '<?=$this->entrevista['man_id']?>','<?= $unidadeCamarao['tmanbc_id'] ?>', '#base_camarao')"></td>
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "manzua", "action" => "deletebiocamarao"), null, true) ?>', '<?=$this->entrevista['man_id']?>','<?= $unidadeCamarao['tmanbc_id'] ?>', '#base_camarao')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
