--- a/application/views/scripts/siripoia/editar.phtml
+++ b/application/views/scripts/siripoia/editar.phtml
@@ -170,24 +170,25 @@
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
        
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
-                <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
-                    <div id="base">
-                        <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "siripoia", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['sir_id'] ?>','distancia')" type="button" value="Adicionar" />
-                        <select class="responsivo" style="float:left;" name="nomePesqueiro">
-                            <option value="" selected></option>
-                            <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
-                                <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
-                            <?php endforeach; ?>
-                        </select>
-                        <input class="responsivo" style="float:left;" type="time" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px"/>
-                        <input class="responsivo" style="float:left;" type="number" name="distAPesqueiro" placeholder="Distância Até pesqueiro (km)" size="23px"/>
+            <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
+                <div id="base">
+                    <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "siripoia", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['sir_id'] ?>','distancia')" type="button" value="Adicionar" />
+                    <select class="responsivo" style="float:left;" name="nomePesqueiro">
+                        <option value="" selected></option>
+                        <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
+                            <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
+                        <?php endforeach; ?>
+                    </select>
+                    <input class="responsivo" style="float:left;" type="time" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px"/>
+                    <input class="responsivo" style="float:left;" type="number" name="distAPesqueiro" placeholder="Distância Até pesqueiro (km)" size="23px"/>
 
-                    </div>
+                </div>
 
-                </fieldset>
-                <br>
-                <?php include('tablepesqueiro.phtml'); ?>
             </fieldset>
+            <br>
+            <?php include('tablepesqueiro.phtml'); ?>
+        </fieldset>
+        <br /><br />
  <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
@@ -216,6 +217,7 @@
         <br>
         <?php include('tableespcaptura.phtml') ;?>
     </fieldset>
+        <br /><br />
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
             <div id="base">
@@ -235,8 +237,8 @@
         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Avistamentos:</legend>
             <table id="pesqueiros">
                 <tr>
-                    <th width="5%">Id Avistamento</th>
-                    <th width="50%">Avistamento</th>
+                    <th width="15%">Id Avistamento</th>
+                    <th width="85%">Avistamento</th>
                 </tr>
                 <?php
                 foreach ($this->vSiripoiaAvistamento as $key => $vSiripoiaAvistamento):
@@ -244,12 +246,19 @@
                     <tr id="itemSiripoiaRows">
                         <td name="inputIdEntrevista"> <?= $vSiripoiaAvistamento['avs_id'] ?> </td>
                         <td name="inputAvistamento" > <?= $vSiripoiaAvistamento['avs_descricao'] ?> </td>
-                        <td><input type="button" class="button-del" width="5%" onclick="jsDeleteAvistamento(<?= $this->entrevista['sir_id'] ?>, '<?= $this->url(array("controller" => "siripoia", "action" => "deleteavistamento"), null, true) ?>', <?= $vSiripoiaAvistamento['avs_id'] ?>)"></td>
+                        <td class="td-botao">
+                            <a name="Excluir" class="button-del" onclick="jsDeleteAvistamento(<?= $this->entrevista['sir_id'] ?>, '<?= $this->url(array("controller" => "siripoia", "action" => "deleteavistamento"), null, true) ?>', <?= $vSiripoiaAvistamento['avs_id'] ?>)">
+                                <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                    <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                </ul>
+                            </a> 
+                        </td>
                     </tr>
                 <?php endforeach; ?>
             </table>
         </fieldset>
     </fieldset>
+        <br /><br />
     <!--////////////////////////////////////////////////////////AMOSTRAGEM PEIXES///////////////////////////////////////////////////////////-->
     <fieldset class="noEditable"><legend>Amostras de Peixes:</legend>
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
@@ -279,10 +288,9 @@
         <br>
          <fieldset class="noEditable" id="itemArteTipoRows"><legend>Dados Cadastrados:</legend>
                 <table id="especiesCapturadas">
-                    <tr>
-                        
+                    <tr>                        
                         <th width="20%">Id Amostra</th>
-                        <th width="20%">Espécie</th>
+                        <th width="30%">Espécie</th>
                         <th width="20%">Comprimento</th>
                         <th width="10%">Sexo</th>
                         <th width="20%">Peso</th>
@@ -297,12 +305,19 @@
                             <td name="inputComp.Cabeca"> <?= $unidadePeixe['tbp_comprimento'] ?> </td>
                             <td name="inputSexo"> <?= $unidadePeixe['tbp_sexo'] ?> </td>
                             <td name="inputPeso"> <?= $unidadePeixe['tbp_peso'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "siripoia", "action" => "deletebiopeixe"), null, true) ?>', '<?=$this->entrevista['sir_id']?>','<?= $unidadePeixe['tsirbp_id'] ?>', '#base_peixe')"></td>
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "siripoia", "action" => "deletebiopeixe"), null, true) ?>', '<?=$this->entrevista['sir_id']?>','<?= $unidadePeixe['tsirbp_id'] ?>', '#base_peixe')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
             </fieldset>
         </fieldset>
+        <br /><br />
 <!--////////////////////////////////////////////////////////AMOSTRAGEM PEIXES///////////////////////////////////////////////////////////-->
         <fieldset class="noEditable"><legend>Amostras de Camarão:</legend>
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
@@ -357,7 +372,13 @@
                             <td name="inputMaturidade"> <?= $unidadeCamarao['tmat_tipo'] ?> </td>
                             <td name="inputComp.Cabeca"> <?= $unidadeCamarao['tbc_comprimento_cabeca'] ?> </td>
                             <td name="inputPeso"> <?= $unidadeCamarao['tbc_peso'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "siripoia", "action" => "deletebiocamarao"), null, true) ?>', '<?=$this->entrevista['sir_id']?>','<?= $unidadeCamarao['tsirbc_id'] ?>', '#base_camarao')"></td>
+                            <td class="td-botao">
+                                <a name="Excluir" class="button-del" onclick="jsDeleteUnidade('<?= $this->url(array("controller" => "siripoia", "action" => "deletebiocamarao"), null, true) ?>', '<?=$this->entrevista['sir_id']?>','<?= $unidadeCamarao['tsirbc_id'] ?>', '#base_camarao')">
+                                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                                    </ul>
+                                </a> 
+                            </td>
                         </tr>
                     <?php endforeach; ?>
                 </table>
